css/oldsite-css/scrollable-buttons.css
/* styles.css */

/*
. = class
# = id
  = tag name 
*/

@import url('fonts.css');

.nav-btns2 button {
    font-size: 20px;
    position: relative;
    display: flex;
    top: 0.1%;
    text-align: left;
    left: 15%;
    width: 12vw;
    height: 3vh;
    font-family: 'Ubuntu';
    font-weight: light;
    background-color: transparent;
    background-repeat: no-repeat;
    cursor: pointer;
    border: none;
    color: black;
    margin-top: 5vh;
    z-index: 2;
}

.imgBtns button {
    position: relative;
    display: flex;
    top: 0.1%;
    text-align: left;
    left: 20%; /*20%*/
    width: 9.75vw; /*9.75*/
    height: 9vh;
    font-weight: bold;
    cursor: pointer;
    color: black;
    margin-top: 5vh;
    z-index: 2;
    border: none;
    background: transparent;
}

#b_i1 {
    padding: 0;
}

.imgBtns input {
    position: relative;
    display: flex;
    left: 5vw;
    top: 5vh;
    width: 45%;
    height: 30%;
    margin: 0;
    border: 3px solid #000000;
}

.imgBtns input:hover {
    border-color: rgb(120, 120, 230);
}

.nav-btns2 button:hover {
    color: rgb(120, 120, 230);
}

body {
    margin: 0;
    padding: 0;
}

#back {
    padding-top: 1vh;
    left: 5vw;
    color: white;
}

#b_spacer {
    padding-top: 1vh;
}

.nav-btns button {
    margin: 5px;
}
.imgs {
    margin-top: 100px;
}

/* from the html file */
.scrollable-container {
    box-sizing: border-box;
    position: relative;
    top: 35vh;
    left: 1vw;
    width: 16vw;
    height: 57vh;
    overflow: auto;
    border: white;

}

